# esperanto

./: Cargo.toml  readme.md
esperanto/: Cargo.toml
esperanto-android/: .gitignore  Dockerfile  build.gradle.kts  settings.gradle
esperanto-android/esperanto/: build.gradle.kts
esperanto-android/gradle/wrapper/: gradle-wrapper.properties
esperanto-core/: Cargo.toml
esperanto-core/src/: jsvalue_wrapper.rs  lib.rs  worker.rs  worker_state.rs
esperanto-core/src/jsclass/: jsclass.rs  jsclass_builder.rs  mod.rs
esperanto-core/src/test_util/: always_return_runtime.rs  dummy_js_value.rs  empty_js_value.rs  mod.rs
esperanto-core/tests/: blah.rs
esperanto-engine-javascriptcore/: Cargo.toml
esperanto-engine-javascriptcore/src/: jscore_context.rs  jscore_runtime.rs  jscore_string.rs  jscore_value.rs  lib.rs
esperanto-engine-javascriptcore/src/util/: mod.rs
esperanto-engine-shared/: Cargo.toml
esperanto-engine-shared/src/: lib.rs
esperanto-engine-shared/src/errors/: jscontext_errors.rs  jsconversion_errors.rs  jsruntime_errors.rs  jsvalue_errors.rs  mod.rs
esperanto-engine-shared/src/metadata/: jssource.rs  mod.rs
esperanto-engine-shared/src/traits/: createjsvalue.rs  errors.rs  jscontext.rs  jsruntime.rs  jsvalue.rs  mod.rs
esperanto-engine-shared/src/util/: jscontext_with_runtime.rs  mod.rs
esperanto-engine-tests/: Cargo.toml
esperanto-engine-tests/src/: dummy_engine.rs  lib.rs
esperanto-engine-tests/tests/: jscontext.rs  jsruntime.rs  jsvalue.rs
esperanto-ffi/: Cargo.toml  build.rs
esperanto-ffi/src/: context.rs  lib.rs  shared.rs  util.rs  value.rs
esperanto-ios/Esperanto/: Esperanto.h  Esperanto.modulemap  JSContext.swift  JSValue.swift  NumberGenerator.swift
esperanto-ios/Esperanto.xcodeproj/: project.pbxproj
esperanto-ios/Esperanto.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
esperanto-ios/EsperantoDeviceTests/: EsperantoDeviceTests.swift
esperanto-ios/EsperantoTests/: EsperantoTests.swift
esperanto-javascriptcore/: Cargo.toml  build.rs
esperanto-javascriptcore-sys/: Cargo.toml  build.rs
esperanto-javascriptcore/src/: javascriptcore.rs  jsc_class.rs  jsc_classbuilder.rs  jsc_classdefinition.rs  jsc_context.rs  jsc_contextgroup.rs  jsc_contextgroup_state.rs  jsc_error.rs  jsc_function.rs  jsc_globalcontext.rs  jsc_object.rs  jsc_runtime.rs  jsc_sharedcontextref.rs  jsc_string.rs  jsc_value.rs  lib.rs
esperanto-javascriptcore/src/ffi/: ffi_jscontext.rs  ffi_jsvalue.rs  mod.rs
esperanto-javascriptcore/src/macro_output/: mod.rs  trait_checks.rs
esperanto-javascriptcore/src/test_util/: finalize_checker.rs  mod.rs
esperanto-jni/: Cargo.toml
esperanto-jni/src/: context.rs  implementation.rs  lib.rs  value.rs
esperanto-macros/: Cargo.toml
esperanto-macros/src/: dummy.rs  feature_imports.rs  js_export_attribute.rs  js_export_method.rs  js_export_options.rs  js_typechecks.rs  lib.rs
esperanto-macros/tests/: test.rs
esperanto-quickjs/: Cargo.toml
esperanto-quickjs/src/: lib.rs  qjs_classids.rs  qjs_context.rs  qjs_error.rs  qjs_function.rs  qjs_runtime.rs  qjs_shared_context_ref.rs  qjs_value.rs  ref_count.rs
esperanto-shared/: Cargo.toml
esperanto-shared/src/: enums.rs  errors.rs  lib.rs
esperanto-shared/src/trait_tests/: jscontext_creator_tests.rs  jscontext_tests.rs  jsobject_tests.rs  jsvalue_tests.rs  mod.rs
esperanto-shared/src/traits/: jsclass.rs  jsclass_builder.rs  jscontext.rs  jscontext_creator.rs  jsconvertible.rs  jsobject.rs  jsruntime.rs  jsvalue.rs  mod.rs
esperanto-shared/src/util/: closures.rs  cstr.rs  js_proxy.rs  jsclass_builder.rs  mod.rs
esperanto-traits/: Cargo.toml
esperanto-traits/src/: errors.rs  js_traits.rs  jscontext.rs  jsruntime.rs  lib.rs
esperanto/src/: lib.rs
esperanto/src/jscore/: exception.rs  jscore_class_storage.rs  jscorecontext.rs  jscorecontextpointer.rs  jscoreexport.rs  jscoreruntime.rs  jscorestring.rs  jscorevalue.rs  jscorevaluepointer.rs  mod.rs
esperanto/src/quickjs/: exception.rs  mod.rs  quickjs_class_storage.rs  quickjs_prototype_storage.rs  quickjscontext.rs  quickjscontextpointer.rs  quickjscstr.rs  quickjsexport.rs  quickjsruntime.rs  quickjsvalue.rs  quickjsvalueholder.rs
esperanto/src/shared/: as_ptr.rs  engine_impl.rs  mod.rs  retain.rs  try_as.rs
esperanto/src/shared/context/: context.rs  context_error.rs  context_implementation.rs  context_internal.rs  context_internals.rs  context_runtime_store.rs  evaluate_metadata.rs  mod.rs
esperanto/src/shared/errors/: catch_exception_error.rs  conversion_error.rs  esperanto_error.rs  export_error.rs  javascript_error.rs  jsvalue_to_error.rs  mod.rs
esperanto/src/shared/export/: js_wrapper.rs  jsexport_private_data.rs  jsexport_prototype_store.rs  jsexportclass.rs  mod.rs
esperanto/src/shared/runtime/: mod.rs  runtime.rs  runtime_error.rs  runtime_implementation.rs  runtime_internal.rs
esperanto/src/shared/util/: mod.rs  stored_or_referenced.rs
esperanto/src/shared/value/: as_value.rs  has_value.rs  mod.rs  result.rs  value.rs  value_conversion.rs  value_error.rs  value_implementation.rs  value_internal.rs
esperanto/tests/: context.rs  export_macro.rs  value.rs
esperanto/tests/export/: jsexportclass.rs  mod.rs
examples/: export.rs
libquickjs-sys/embed/quickjs/: quickjs.c
src/: lib.rs
src/jscore/: check_exception.rs  jscore_context.rs  jscore_context_empty_global.rs  jscore_context_runtime_store.rs  jscore_context_with_bundled_runtime.rs  jscore_ctx_global_data.rs  jscore_export.rs  jscore_object_proxy.rs  jscore_runtime.rs  jscore_string.rs  jscore_value.rs  jscore_value_rawref.rs  mod.rs  value_from.rs  value_into.rs
src/shared/: mod.rs
src/shared/errors/: esperanto_error.rs  mod.rs
src/shared/export/: class_export_definition.rs  export_error.rs  export_macro.rs  mod.rs
src/shared/external_api/: context.rs  conversion_error.rs  convert.rs  esperanto_error.rs  mod.rs  runtime.rs  value.rs
src/shared/traits/: jscontext.rs  jsconvertable.rs  jsruntime.rs  jsvalue.rs  mod.rs  retain.rs  tryas.rs
tests/: fiddle.rs
(+8 files in other folders)
