[workspace]

members = [
  # "esperanto-core",
  # "esperanto-javascriptcore", # "esperanto-quickjs",
  # "esperanto-shared", # "esperanto-ffi",
  # "esperanto-jni",
  # "esperanto-macros",
  "esperanto-engine-tests",
  "esperanto-engine-shared",
  "esperanto-engine-javascriptcore",
]

[profile.release]
lto = true
opt-level = "s"
panic = 'abort'
