[package]
authors = ["Alastair Coote <rust@alastair.is>"]
edition = "2018"
name = "esperanto"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ['engine-javascriptcore-sys']
engine-javascriptcore-sys = ['javascriptcore-sys']

[dependencies]
javascriptcore-sys = {version = "0.0.4", optional = true}
thiserror = "1.0"
