[package]
edition = "2018"
name = "esperanto_javascriptcore"
version = "0.1.0"

# [lib]
# crate-type = ["staticlib"]

[dependencies]
esperanto_shared = {path = "../esperanto-shared"}
javascriptcore-sys = "0.0.4"

[build-dependencies]
bindgen = "0.54.1"
cbindgen = "0.14.3"
# cc = {version = "1.0", features = ["parallel"]}
