[package]
authors = ["Alastair Coote <alastair.coote@nytimes.com>"]
edition = "2018"
name = "esperanto_macros"
version = "0.1.0"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = {version = "1.0", features = ["full"]}
