[package]
edition = "2018"
name = "esperanto_quickjs"
version = "0.1.0"

[dependencies]
esperanto_shared = {path = "../esperanto-shared"}
# libquickjs-sys = {git = "https://github.com/alastaircoote/quickjs-rs.git", features = ["dump_leaks"]}
quickjs_android_suitable_sys = {path = "../../quickjs-android-suitable-sys", features = ["dump_leaks"]}
slotmap = "0.4.0"
